# scalpyl

./: .envrc  .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  requirements.txt
.forgejo/workflows/: python-package.yml
.github/workflows/: python-package.yml
nixpkgs/: decompyle3.nix  pyinstxtractor-ng.nix  x-python.nix  xasm.nix
scalpyl/code/: bytecode.py
scalpyl/disassemblers/: __init__.py  dis.py  xdis.py
scalpyl/loaders/: base.py  marshal_loader.py  source_loader.py  xdis_loader.py
src/scalpyl/: __init__.py
src/scalpyl/code/: __init__.py  block.py  bytecode.py  decompiled_code.py
src/scalpyl/decompilers/: base.py
src/scalpyl/disassemblers/: base.py  dis.py  xdis.py
src/scalpyl/loaders/: __init__.py  base.py  marshal_loader.py  source_loader.py  xdis_loader.py
src/scalpyl/unpackers/: pyinstaller.py
test/: test_disassembler_dis.py  test_disassembler_xdis.py
