[build-system]
requires = ["setuptools>=78.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {where = ["src"]}

[project]
name = "scalpyl"
version = "0.0.1"
authors = [
    {name = "Ivy Fan-Chiang", email = "dev@ivyfanchiang.ca"},
]
description = "Graphical and scriptable Python bytecode and executable reverse engineering environment"

license = "BSD-3-Clause"
readme = "README.md"

dependencies = [
    "xdis~=6.1.3"
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/hexadecimalDinosaur/scalpyl"

[project.optional-dependencies]
pyinstxtractor = [
    "pyinstxtractor-ng>=2025.1.6"
]
dev = [
    "pytest"
]

# [project.scripts]
# cli-name = ""
