[build-system]
requires = ["setuptools>=78.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {where = ["src"]}

[project]
name = "scalpyl"
version = "0.0.1"
authors = [
    {name = "Ivy Fan-Chiang", email = "dev@ivyfanchiang.ca"},
]
description = "Graphical and scriptable Python bytecode and executable reverse engineering environment"

license = "BSD-3-Clause"
readme = "README.md"

dependencies = [
    "xdis~=6.1.3",
    "pyinstxtractor-ng>=2025.1.6"
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/hexadecimalDinosaur/scalpyl"

[project.optional-dependencies]
dev = [
    "pytest~=8.3.5",
    "mypy~=1.15.0",
    "pytest-mypy~=1.0.1",
    "flake8~=7.2.0",
    "pytest-flake8~=1.3.0"
]

# [project.scripts]
# cli-name = ""

[tool.pytest.ini_options]
minversion = "8.0"
# addopts = "--mypy"
testpaths = [
    "test"
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
files = "src/scalpyl/**/*.py"

[[tool.mypy.overrides]]
module = [
    "xdis"
]
ignore_missing_imports = true
